hphp/test/quick/record-parent-typehint-error.php.expectf
Catchable fatal error: Argument 1 passed to foo() must be an instance of B, C given in %s/record-parent-typehint-error.php on line 20
